--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -14,7 +14,7 @@
             <form method="post" enctype=multipart/form-data>
                 <div class="input-group mt-3">
                     <div class="custom-file">
-                        <input type="file" class="custom-file-input" name="file" accept="audio/mpeg">
+                        <input type="file" class="custom-file-input" name="file" accept="audio/mpeg" multiple="multiple">
                         <label class="custom-file-label">Choose file</label>
                     </div>
                 </div>
